--- a/etc/sqlgrey.conf
+++ b/etc/sqlgrey.conf
@@ -123,6 +123,12 @@
 # db_port = default
 # db_user = sqlgrey
 # db_pass = spaces_are_not_supported
+#
+# For custom options (e.g. SSL), the whole dsn string may be specified
+# (overrides db_type, db_name, db_host, db_port)
+# db_dsn = DBI:SQLite:dbname=/path/to/database.db
+# db_dsn = DBI:mysql:database=sqlgrey;host=localhost;port=3306
+#
 # db_prepare_cache = 0 # use prepared statements cache
                        # BEWARE: memory leaks have been reported
 		       # when it is active
